document-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: 182.208.21.16/32
    nginx.ingress.kubernetes.io/app-root: /streamdocs/view/documents
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ /streamdocs/v4/documents/([^/]*)$ {
        if ($request_method = GET) {
          return 401;
        }
        proxy_pass https://localhost:8080;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - document.epapyrus.com
    secretName: document.epapyrus.com-tls
  rules:
    - host: document.epapyrus.com
      http:
        paths:
          - path: /streamdocs
            pathType: Prefix
            backend:
              service:
                name: streamdocs
                port:
                  number: 8080
          - path: /streamdocs/v4
            pathType: Prefix
            backend:
              service:
                name: streamdocs
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: document-server-auth
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: document-server-auth
    nginx.ingress.kubernetes.io/auth-realm: Admin
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - document.epapyrus.com
    secretName: document.epapyrus.com-tls
  rules:
    - host: document.epapyrus.com
      http:
        paths:
          - path: /streamdocs/view/documents/admin
            pathType: Prefix
            backend:
              service:
                name: streamdocs
                port:
                  number: 8080
